--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -523,9 +523,204 @@ int main()
 
 
 ### 📌 14.7 구조체를 함수로 전달하는 방법
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <string.h>
+#define FUNDLEN 50
+
+struct fortune {
+	char	bank_name[FUNDLEN];
+	double	bank_saving;
+	char	fund_name[FUNDLEN];
+	double	fund_invest;
+
+	float* arr;
+};
+
+double sum(struct fortune*);
+
+int main()
+{
+	struct fortune my_fortune = {
+		"Wells-Fargo",
+		123.45,
+		"JPMorgan Chase",
+		6789.7
+	};
+
+	printf("Total : $%.2f.\n",
+		//sum(&my_fortune.bank_saving, &my_fortune.fund_invest)
+		sum(&my_fortune)
+	);
+
+	//struct fortune my_fortune2;
+	//my_fortune2 = my_fortune;
+
+	printf("%f", my_fortune.bank_saving);
+	
+
+	return 0;
+}
+
+double sum(struct fortune* mf)	//TOOD: try pointers
+{
+	//(*mf).bank_saving = 1.1;
+
+	//return mf->bank_saving + mf->fund_invest;
+	return (*mf).bank_saving + (*mf).fund_invest;
+}
+```
+
+
+### 📌 14.8 구조체와 함수 연습문제
+- Q1.
+- `scanf("%[^\n]%*c", pt_user_name->first);`에서 `%*c`가 필요한 이유는  
+  `입력 버퍼에 남아 있는 줄바꿈 문자(\n)를 처리하기 위해서`입니다.
+- C++에서는 구조체 안에 함수(=기능)를 넣어버린다.
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+#define NLEN 30
+
+struct name_count {
+	char first[NLEN];
+	char last[NLEN];
+	int num;
+};
+
+void receive_input(struct name_count*);
+void count_characters(struct name_count*);
+void show_result(const struct name_count*);
+char* s_gets(char* st, int n);
+
+int main()
+{
+	struct name_count user_name;
+
+	receive_input(&user_name);
+	count_characters(&user_name);
+	show_result(&user_name);
+
+	return 0;
+}
 
 
 
+void receive_input(struct name_count* pt_user_name)
+{
+	//printf("Input your first name:\n>> ");
+	//s_gets(pt_user_name->first, NLEN);
+	//printf("Input your last name:\n>> ");
+	//s_gets(pt_user_name->last, NLEN);
+	
+	int flag;
+
+	printf("Input your first name:\n>> ");
+	flag = scanf("%[^\n]%*c", pt_user_name->first);  // ^ : cap operator
+	if (flag != 1)
+		printf("Wrong input");
+
+	printf("Input your last name:\n>> ");
+	flag = scanf("%[^\n]%*c", pt_user_name->last);
+	if (flag != 1)
+		printf("Wrong input");
+}
+
+void count_characters(struct name_count* pt_user_name)
+{
+	pt_user_name->num = (int)strlen(pt_user_name->first) + (int)strlen(pt_user_name->last);
+}
+
+void show_result(const struct name_count* pt_user_name)
+{
+	printf("Hi, %s %s. Your name has %d characters.",
+		(*pt_user_name).first, (*pt_user_name).last, (*pt_user_name).num);
+}
+
+char* s_gets(char* st, int n)
+{
+	char* pt;
+	char* find;
+
+	pt = fgets(st, n, stdin);
+	if (pt)
+	{
+		if (find = strchr(st, '\n'))
+			*find = '\0';
+		else
+			while (getchar() != '\n');
+	}
+
+	return pt;
+}
+```
+- Q2.
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <string.h>
+
+#define NLEN 30
+
+struct name_count {
+	char first[NLEN];
+	char last[NLEN];
+	int num;
+};
+
+struct name_count receive_input();
+struct name_count count_characters(struct name_count);
+void show_result(const struct name_count);
+
+int main()
+{
+	struct name_count user_name;
+
+	user_name = receive_input();
+	user_name = count_characters(user_name);
+	show_result(user_name);
+
+	return 0;
+}
+
+struct name_count receive_input()
+{
+	struct name_count nc;
+	int flag;
+
+	printf("Input your first name:\n>> ");
+	flag = scanf("%[^\n]%*c", nc.first);
+	if (flag != 1)
+		printf("wrong input.");
+
+	printf("Input your last name:\n>> ");
+	flag = scanf("%[^\n]%*c", nc.last);
+	if (flag != 1)
+		printf("wrong input.");
+
+	return nc;
+}
+
+struct name_count count_characters(struct name_count nc)
+{
+	nc.num = (int)strlen(nc.first) + (int)strlen(nc.last);
+
+	return nc;
+}
+
+void show_result(const struct name_count nc)
+{
+	printf("Hi, %s %s. Your name has %d characters.",
+		nc.first, nc.last, nc.num);
+}
+```
+
+
+### 📌 14.9 구조체와 할당 메모리
 
 
 
