--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -721,6 +721,214 @@ void show_result(const struct name_count nc)
 
 
 ### 📌 14.9 구조체와 할당 메모리
+- 동적 할당을 써야 하는 경우, 올바른 사용법  
+  ✔ 사용자가 입력한 가변 길이 문자열을 저장해야 할 때  
+  ✔ MAXTITL 같은 고정 크기 제한 없이 메모리를 유연하게 관리하고 싶을 때  
+  ✔ 매우 큰 데이터를 다룰 때, 스택 대신 힙에 저장하는 것이 유리할 때  
+``` c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+struct book {
+    char* title;
+    char* author;
+    float price;
+};
+
+int main() {
+    struct book myBook;
+
+    // 동적 할당
+    myBook.title = (char*)malloc(100);  // 100바이트 크기 할당
+    myBook.author = (char*)malloc(100); // 100바이트 크기 할당
+
+    if (myBook.title == NULL || myBook.author == NULL) {
+        printf("Memory allocation failed!\n");
+        return 1;
+    }
+
+    // 문자열 복사
+    strcpy(myBook.title, "The C Programming Language");
+    strcpy(myBook.author, "Brian Kernighan, Dennis Ritchie");
+
+    // 출력
+    printf("Title: %s\n", myBook.title);
+    printf("Author: %s\n", myBook.author);
+
+    // 할당된 메모리 해제 (안 하면 메모리 누수 발생!)
+    free(myBook.title);
+    free(myBook.author);
+
+    return 0;
+}
+```
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/2ceb2b98-9fa5-4a98-b060-73fdb27301e9" />
+
+
+### 📌 14.10 복합 리터럴(Compound Literal)
+- book_to_read = `(struct book)`{ "Alice in Wonderland", "Lewis Carroll", 20.3f };
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <string.h>
+#define MAXTITL 41
+#define MAXAUTL 31
+
+struct book
+{
+	char title[MAXTITL];
+	char author[MAXAUTL];
+	//char* title;		// Not recommended
+	//char* author;		// Not recommended
+	float price;
+};
+
+struct rectangle
+{
+	double width;
+	double height;
+};
+
+double rect_area(struct rectangle r)
+{
+	return r.width * r.height;
+}
+
+double rect_area_ptr(struct rectangle* r)
+{
+	return r->width * r->height;
+}
+
+int main()
+{
+	struct book book_to_read = { "Crime and Punishment", "Fyodor Dostoyevsky", 11.25f };
+
+	/*
+		Compound literals
+		- Temporary structure values
+	*/
+
+	// 구조체 자체를 초기화 리스트로 덮어쓸 수 없는 이유는,
+	// 구조체 선언 시에 초기화 리스트가 사용되기 때문이며,
+	// 선언 후에는 초기화 리스트로 덮어쓰는 문법이 C에서 허용되지 않기 때문
+	// 초기화 리스트는 변수 선언과 동시에 초기값을 할당할 때만 사용됨.
+	//book_to_read = { "Alice in Wonderland", "Lewis Carroll", 20.3f };//Error
+
+	// member별로 수정하는 방법
+	strcpy(book_to_read.title, "Alice in Wonderland");
+	strcpy(book_to_read.author, "Lewis Carroll");
+	book_to_read.price = 20.3f;
+
+	// temp 구조체를 만들어서 복사하는 방법
+	struct book book2 = { "Alice in Wonderland", "Lewis Carroll", 20.3f };
+	book_to_read = book2;
+
+	// Compound Literal !
+	book_to_read = (struct book){ "Alice in Wonderland", "Lewis Carroll", 20.3f };  // l-value
+
+	printf("%s %s\n", book_to_read.title, book_to_read.author);
+
+
+	
+	// l-value 특성 확인.
+	struct rectangle rec1 = { 1.0, 2.0 };
+	double area = rect_area(rec1);
+	area = rect_area((struct rectangle) { 1.0, 2.0 });  // 계산만 필요로 할때는 구조체의 변수 선언 없이 이렇게.
+
+	area = rect_area_ptr(&(struct rectangle) { .height = 3.0, .width = 2.0 });// Designated initializers
+	printf("%f\n", area);
+
+	return 0;
+}
+```
+
+
+### 📌 14.11 신축성있는 배열 멤버(Flexible Array Members)
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/871516c7-9341-46c3-b913-2c1fb4ccbe9f" />
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/e1651afb-6432-4eb0-878d-8fac9e01da53" />
+- 결론 : 배열 크기를 동적으로 변경해야 하는 경우나 구조체 내 여러 멤버가 연속된 메모리 블록에 저장되어야 할 때는 구조체 크기 동적 할당 방식이 더 적합합니다. 반면, 각 멤버에 동적 할당하는 방식은 각 멤버마다 독립적으로 메모리를 할당하고 관리할 수 있어 유연합니다.
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+	/*
+		Flexible array member (struct hack in GCC)
+	*/
+
+	struct flex
+	{
+		size_t count;
+		double average;
+		double values[];	// flexible array member (last member!)
+	};
+
+	const size_t n = 3;
+
+	struct flex* pf = (struct flex*)malloc(sizeof(struct flex) + n * sizeof(double));
+	if (pf == NULL) exit(1);
+
+	printf("\nFlexible array member\n");
+	printf("Sizeof struct flex %zd\n", sizeof(struct flex));	// 16
+	printf("Sizeof *pf %zd\n", sizeof(*pf));	// 16
+	printf("Sizeof malloc %zd\n", sizeof(struct flex) + n * sizeof(double));	// 40
+
+	printf("%lld\n", (long long)pf);	// 12529848
+	printf("%lld\n", (long long)&pf->count);	// 12529848
+	printf("%zd\n", sizeof(pf->count));	// 4
+	printf("%lld\n", (long long)&pf->average);	// 12529856  <- padding으로 8 차이가 난다.
+	printf("Address of pf->values %lld\n", (long long)&pf->values);	// 12529864
+	printf("Value of pf->values %lld\n", (long long)pf->values);	// 12529864
+	printf("Sizeof pf->values %zd\n", sizeof(pf->values));	// 0
+
+
+
+	pf->count = n;
+	pf->values[0] = 1.1;
+	pf->values[1] = 2.1;
+	pf->values[2] = 3.1;
+
+	pf->average = 0.0;
+	for (unsigned i = 0; i < pf->count; ++i)
+		pf->average += pf->values[i];
+	pf->average /= (double)pf->count;
+
+	printf("Average = %f\n", pf->average);	// Average = 2.100000
+
+	/*
+	struct nonflex
+	{
+		size_t count;
+		double average;
+		double *values;		// Use malloc()           <<- 포인터 메모리가 추가로 더 사용된다.
+	};
+
+	struct nonflex nf;
+	nf.value = (double*)malloc(sizeof(double) * n);   <<- 메모리 어디에 위치해 있는지 알 수가 없다.
+	*/
+
+	/*
+		struct flex* pf2 = (struct flex*)malloc(sizeof(struct flex) + n * sizeof(double));
+		if (pf2 == NULL) exit(1);
+
+		//16bytes만 복사해주고, 동적할당 받아온 24bytes는 compiler가 복사해주지 않는다. 
+		*pf2 = *pf1;		// Don't copy flexible members, use memcpy() instead
+
+		free(pf);
+		free(pf2);
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 14.12 익명 구조체
+
+
 
 
 
