--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -848,6 +848,7 @@ int main()
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/871516c7-9341-46c3-b913-2c1fb4ccbe9f" />
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/e1651afb-6432-4eb0-878d-8fac9e01da53" />
 - 결론 : 배열 크기를 동적으로 변경해야 하는 경우나 구조체 내 여러 멤버가 연속된 메모리 블록에 저장되어야 할 때는 구조체 크기 동적 할당 방식이 더 적합합니다. 반면, 각 멤버에 동적 할당하는 방식은 각 멤버마다 독립적으로 메모리를 할당하고 관리할 수 있어 유연합니다.
+
 ``` c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
@@ -926,14 +927,117 @@ int main()
 ```
 
 
-### 📌 14.12 익명 구조체
+### 📌 14.12 익명 구조체 (Anonymous Structures)
+- [what-are-the-benefits-of-unnamed-structs?](https://stackoverflow.com/questions/13376494/what-are-the-benefits-of-unnamed-structs-unions-in-c)
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+struct names
+{
+	char first[20];
+	char last[20];
+};
+
+struct person
+{
+	int id;
+	struct names name;	// nested structure member : 중첩 구조체 멤버
+};
+
+struct person2
+{
+	int id;
+	struct { char first[20]; char last[20]; };  // anonymous structure (NO TAG !)
+};
+
+int main()
+{
+	struct person ted = { 123, {"Bill", "Gates"} };
+	struct person ted3 = { 125, "Robert", "Hand" };  // 이것도 되는데,
+
+	puts(ted.name.first);  // dot operator
+	puts(ted3.name.first);
+
+	struct person2 ted2 = { 124, {"Steve", "wozniak"} };
+	//struct person2 ted2 = { 124, "Steve", "wozniak" };// also works
+	puts(ted2.first);
+
+	return 0;
+}
+```
+
+
+### 📌 14.13 구조체의 배열을 사용하는 함수
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#define SLEN 101
+
+struct book
+{
+	char name[SLEN];
+	char author[SLEN];
+};
+
+void print_books(const struct book books[], int n);
 
 
 
+// 1
+int main()
+{
+	struct book my_books[3];// = { {"The Great Gatsby", "F. Scott Fitzgerald"}, ... };
+
+	my_books[0] = (struct book){ "The Great Gatsby", "F. Scott Fitzgerald" };
+	my_books[1] = (struct book){ "Hamlet", "William Shakespeare" };
+	my_books[2] = (struct book){ "The Odyssey", "Homer" };
+
+	print_books(my_books, 3);
+
+	return 0;
+}
+
+void print_books(const struct book books[], int n)
+{
+	for (int idx = 0; idx < n; idx++)
+		printf("Book %d : \"%s\" written by \"%s\"\n",
+			idx + 1, books[idx].name, books[idx].author);
+}
 
 
 
+// 2
+void print_books(const struct book* books, int n);
 
+int main()
+{
+	struct book* my_books = (struct book*)malloc(sizeof(struct book) * 3);
+
+	if (!my_books) {
+		printf("Malloc failed");
+		exit(1);
+	}
+
+	my_books[0] = (struct book){ "The Great Gatsby", "F. Scott Fitzgerald" };
+	my_books[1] = (struct book){ "Hamlet", "William Shakespeare" };
+	my_books[2] = (struct book){ "The Odyssey", "Homer" };
+
+	print_books(my_books, 3);
+
+	return 0;
+}
+
+void print_books(const struct book* books, int n)
+{
+	for (int idx = 0; idx < n; idx++)
+		printf("Book %d : \"%s\" written by \"%s\"\n", idx + 1, (*(books + idx)).name, (books + idx)->author);
+}
+```
+
+
+### 📌 
 
 
 
