--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -1265,6 +1265,349 @@ void read_books2(const char* filename, struct book** books_dptr, int* n_ptr)//No
 
 
 ### 📌 14.15 공용체의 원리
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main()
+{
+	/*
+		Union <- 공용체 (메모리를 같이 사용함)
+		- Store different data types in the same memory space
+		- Structure vs Union
+	*/
+
+	union my_union {
+		int		i;
+		double	d;
+		char	c;
+	};
+
+	union my_union uni;
+
+	printf("%zd\n", sizeof(union my_union)); // 8  <- 가장 큰 자료형으로 배정됨.
+	printf("%lld\n", (long long)&uni);  // 134470433480
+	printf("%lld %lld %lld\n", (long long)&uni.i, (long long)&uni.d, (long long)&uni.c);  // 134470433480 134470433480 134470433480
+
+	union my_union save[10];
+
+	printf("%zd\n", sizeof(save));  // 80
+
+	/*
+		Union of different types
+	*/
+
+	union my_union uni1;
+
+	uni1.c = 'A';
+	printf("%c %x %d\n", uni1.c, (int)uni1.c, uni1.i);  // A 41 -858993599
+	// 0xCCCCCC41 = -858993599
+
+	uni1.i = 0;
+	uni1.c = 'A';
+	printf("%c %x %d\n", uni1.c, (int)uni1.c, uni1.i);  // A 41 65
+	// 0x00000041 = 65
+
+	uni1.d = 1.2;
+	printf("%d %f %d %c\n", uni1.i, uni1.d, (int)uni1.c, uni1.c);  // 858993459 1.200000 51 3
+	// 33 33 33 33 33 33 f3 3f
+	// 0x3ff3333333333333 = 1.19999999999999995559107901499E0
+	// 0x33333333 = 858993459  (decimal)
+	// 0x33 = 51 = '3'
+
+	/*
+		Initializing unions
+	*/
+
+	union my_union uni2 = uni1;			 // Copy another union
+	union my_union uni3 = { 10 };		 // First element (member) only
+	union my_union uni4 = { .c = 'A' }; // Designated initializer
+	union my_union uni5 = { .d = 1.23, .i = 100 }; // Do NOT recommend
+
+	printf("%d %f %c\n", uni5.i, uni5.d, uni5.c);  // 100 0.000000 d
+
+	uni.i = 123;
+	uni.d = 1.2;
+	uni.c = 'k';
+
+	printf("%d %f %c\n", uni.i, uni.d, uni.c);  // 858993515 1.200000 k
+
+	union my_union* pu = &uni;	// Pointer to union
+	int x = pu->i; // -> operator, same as x = fit.digit
+
+	//uni.c = 'A';
+	uni.d = 65.345;
+	double real = 3.14 * uni.d;	// do NOT recommend
+
+	return 0;
+}
+```
+
+
+### 📌 14.16 공용체와 구조체를 함께 사용하기
+- 각각의 이름이 동일한 메모리 공간을 참조하므로, 접근 방식만 다를 뿐 실제 데이터는 동일  
+  메모리 효율성이 매우 높아, 같은 데이터를 다양한 방식으로 다루는 데 유용
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/572244af-4d64-4312-b60c-2fe43dd6d112" />
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/1c4064d3-e663-47fc-b93d-873b583c6667" />
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Unions And Structures
+*/
+
+struct personal_owner {
+	char rrn1[7];		//Resident Registration Number
+	char rrn2[8];		//ex: 830422-1185600
+};
+
+struct company_owner {
+	char crn1[4];		//Company Registration Number
+	char crn2[3];		//ex: 111-22-33333
+	char crn3[6];
+};
+
+union data {
+	struct personal_owner	po;
+	struct company_owner	co;
+};
+
+struct car_data {
+	char model[15];
+	int status; /* 0 = personal, 1 = company */
+	union data ownerinfo;
+};
+
+void print_car(struct car_data car)
+{
+	printf("---------------------------------\n");
+	printf("Car model : %s\n", car.model);
+
+	if (car.status == 0) /* 0 = personal, 1 = company */
+		printf("Personal owner : %s-%s\n",
+			car.ownerinfo.po.rrn1, car.ownerinfo.po.rrn2);
+	else
+		printf("Company owner : %s-%s-%s\n",
+			car.ownerinfo.co.crn1, car.ownerinfo.co.crn2, car.ownerinfo.co.crn3);
+	printf("---------------------------------\n");
+}
+
+int main()
+{
+	struct car_data my_car = { .model = "Avante",.status = 0,.ownerinfo.po = {"830422", "1185600"} };
+	struct car_data company_car = { .model = "Sonata",.status = 1,.ownerinfo.co = {"111", "22", "33333"} };
+
+	print_car(my_car);
+	print_car(company_car);
+
+	return 0;
+}
+```
+
+
+### 📌 14.17 익명 공용체
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Unions And Structures
+*/
+
+struct personal_owner {
+	char rrn1[7];		//Resident Registration Number
+	char rrn2[8];		//ex: 830422-1185600
+};
+
+struct company_owner {
+	char crn1[4];		//Company Registration Number
+	char crn2[3];		//ex: 111-22-33333
+	char crn3[6];
+};
+
+struct car_data {
+	char model[15];
+	int status; /* 0 = personal, 1 = company */
+	union {
+		struct personal_owner	po;
+		struct company_owner	co;
+	};
+};
+
+void print_car(struct car_data car)
+{
+	printf("---------------------------------\n");
+	printf("Car model : %s\n", car.model);
+
+	if (car.status == 0) /* 0 = personal, 1 = company */
+		printf("Personal owner : %s-%s\n",
+			car.po.rrn1, car.po.rrn2);
+	else
+		printf("Company owner : %s-%s-%s\n",
+			car.co.crn1, car.co.crn2, car.co.crn3);
+	printf("---------------------------------\n");
+}
+
+int main()
+{
+	struct car_data my_car = { .model = "Avante",.status = 0,.po = {"830422", "1185600"} };
+	struct car_data company_car = { .model = "Sonata",.status = 1,.co = {"111", "22", "33333"} };
+
+	print_car(my_car);
+	print_car(company_car);
+
+	return 0;
+}
+```
+
+
+### 📌 14.18 열거형(Enumerated Types)
+- enum(열거형, Enumeration)은 개발자가 특정한 상수들의 집합을 정의할 때 사용하는 자료형  
+  즉, `의미 있는 이름을 숫자 값에 할당`할 수 있도록 해주는 기능  
+  ex) yellow라는 이름으로 2를 사용하게 해준 것.
+``` c
+#include <stdio.h>
+
+/** Motivation
+int c = 0; // red:0, orange:1, yellow:2, green:3, ...
+if (c == 0)
+	printf("red");
+else if(c == 1)
+	printf("orange");
+else if (c == 2)
+	printf("yellow");
+... ...
+*/
+
+/**
+#define RED		1
+#define ORANGE	2
+#define YELLOW  3
+
+int c = YELLOW;
+if (c == YELLOW)
+	printf("yellow");
+*/
+
+int main()
+{
+	/*
+		Enumerated type
+		- Symbolic names to represent integer constants
+		- Improve readability and make it easy to maintain
+		- enum-specifier (struct-specifier, union-specifier)
+
+		Enumerators
+		- The symbolic constants
+	*/
+
+	enum spectrum { red, orange, yellow, green, blue, violet };
+	//				0    1       2       3      4     5
+
+	enum spectrum color;
+	color = yellow;
+	if (color == yellow)
+		printf("yellow");	//Note: enumerators are not strings
+
+	for (color = red; color <= violet; color++)//Note: ++ operator doesn't allowed in C++, use type int.
+		printf("%d\n", color);
+
+	printf("red = %d, orange = %d\n", red, orange);
+
+	enum kids { jackjack, dash, snoopy, nano, pitz };
+	// nina has a value of 3
+	enum kids my_kid = nano;
+	printf("nano %d %d\n", my_kid, nano);
+
+	enum levels { low = 300, medium = 500, high = 2000 };
+
+	int score = 800;//TODO: user input
+	if (score > high)
+		printf("High score!\n");
+	else if (score > medium)
+		printf("Good job\n");
+	else if (score > low)
+		printf("Not bad\n");
+	else
+		printf("Do your best\n");
+
+	enum pet { cat, dog = 10, lion, tiger };
+	// puma has a value of 11
+	printf("cat %d\n", cat);
+	printf("lion %d\n", lion);
+
+	return 0;
+}
+```
+
+
+### 📌 14.19 열거형 연습문제
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <string.h> // strcmp (HINT!)
+#include <stdbool.h>// C99
+
+enum spectrum {red, orange, yellow, green, blue};
+const char* colors[] = { "red", "orange", "yellow", "green", "blue"};
+
+#define LEN 30
+
+int main()
+{
+	char choice[LEN] = { 0, };
+	enum spectrum color;
+	bool color_is_found = false;
+	
+	while (1)
+	{
+		puts("Input a color name (empty line to quit):");
+
+		if (scanf("%[^\n]%*c", choice) != 1)
+			break;
+
+		for (color = red; color <= blue; color++)
+		{
+			if (strcmp(choice, colors[color]) == 0)
+			{
+				color_is_found = true;
+				break;
+			}
+		}
+
+		if (color_is_found)
+			switch (color)
+			{
+			case red:
+				puts("Red roses");
+				break;
+			case orange:
+				puts("Oranges are delicious");
+				break;
+			case yellow:
+				puts("Yellow sunflowers");
+				break;
+			case green:
+				puts("Green apples");
+				break;
+			case blue:
+				puts("Blue ocean");
+				break;
+			}
+		else
+			printf("Please try different color %s.\n", choice);
+
+		color_is_found = false;		
+	}
+	puts("Goodbye!");
+
+	return 0;
+}
+```
+
+
+### 📌 14.20 이름공간 공유하기
 
 
 
@@ -1282,5 +1625,15 @@ void read_books2(const char* filename, struct book** books_dptr, int* n_ptr)//No
 
 
 
-### 📌 1
+
+
+
+
+
+
+
+
+
+
+### 📌 
 
