--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -1608,10 +1608,73 @@ int main()
 ```
 
 
-### 📌 14.20 이름공간 공유하기
+### 📌 14.20 이름공간 공유하기(Namespace)
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int iamfunction()
+{
+	return 0;
+}
+
+//int a = 123;
+
+int main()
+{
+	/*
+		namespace
+		- Identify parts of a program in which a name is recognized
+		- You can use the same name for one variable and one tag.
+		- C++: use 'namespace' to use the same identifiers in the duplicated scopes.
+	*/
+
+	int myname = 123;
+
+	{
+		int myname = 345;
+		//double myname = 3.14;//ERROR
+	}
+
+	struct rect { double x; double y; };
+
+	//int rect = 123;	// OK in C (Not OK in C++)
+	//struct rect rect = { 1.1, 2.2 };// struct rect and rect are in different categories
+
+	typedef struct rect rect;
+	rect rect = { 1.1, 2.2 };//Not OK
+
+	//int iamfunction = iamfunction();//ERROR
+
+	/*
+		Namespace pollution (KNK p.465)
+		- Names in different files accidentally conflicting with each other
+	*/
+
+	printf("%d\n", a);// other.c
+
+	return 0;
+}
+
+//// other.c
+int a = 1;
+//static int a = 1;
+int b = 2;
+int c = 3;
+int i = 4;
+int j = 5;
+int health = 100;
+// more useful names
+```
 
 
+### 📌 14.21 함수 포인터의 원리(Function Pointers)
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/1a436d83-2b63-4dc7-8387-bdec3ca0842b" />
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/6d6a5369-c85e-4462-9f10-a4746ef30d25" />
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/471d32db-ac64-422d-93b6-3f3ff9435b07" />
 
+
+### 📌 14.22 함수 포인터의 사용 방법(Function Pointers)
 
 
 
