--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -1675,8 +1675,233 @@ int health = 100;
 
 
 ### 📌 14.22 함수 포인터의 사용 방법(Function Pointers)
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/4da48611-5a8e-4eaa-819d-8d9ca79ea0dd" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <ctype.h> // toupper(), tolower()
+
+void ToUpper(char* str)
+{
+	while (*str)
+	{
+		*str = toupper(*str);
+		str++;
+	}
+}
+
+void ToLower(char* str)
+{
+	while (*str)
+	{
+		*str = tolower(*str);  // _cdecl 함수호출규약(?)
+		str++;
+	}
+}
+
+void UpdateString(char* str, int (*pf)(int))
+{
+	while (*str)
+	{
+		*str = (*pf)(*str);
+		str++;
+	}
+}
+
+int main()
+{
+	char str[] = "Hello, World!";
+
+	void (*pf)(char*);  // 포인터로만 실행시키기 위해서, 파라미터의 사이즈와 반환값의 형태를 미리 적어줘야한다.
+
+	pf = ToUpper;           // 함수 이름 자체가 주소를 가리킨다.
+	// pf = &ToUpper;       // 주소를 직접 찍어준다.
+	// pf = ToUpper(str);    <- 반환값을 넣겠다는 거니까 안된다.
+
+	printf("String literal %lld\n", (long long)("Hello, World!"));	// String literal 9468720 (text segment)
+	printf("Function pointer %lld\n", (long long)ToUpper);			// Function pointer 9442460 (text segment)
+	printf("Variable %lld\n", (long long)str);						// Variable 16448984 (stack)
+
+	(*pf)(str);  // 포인터니까 indirection 후 사용한다. (권장)
+	//pf(str);   // 주소 자체도 함수명이니까 그냥 바로 쓴다.
+
+	printf("ToUpper %s\n", str);		// ToUpper HELLO, WORLD!
+
+	pf = ToLower;
+
+	pf(str);
+
+	printf("ToLower %s\n", str);		// ToLower hello, world!
 
 
+
+	/*
+		passing function pointers to functions
+		- 공통된 패턴(함수)들을 묶어서 하나의 함수로 다시 만들 수는 없을까.
+		- 
+	*/
+
+	UpdateString(str, toupper);
+
+	printf("ToUpper %s\n", str);		// ToUpper HELLO, WORLD!
+
+	UpdateString(str, tolower);
+
+	printf("ToLower %s\n", str);		// ToLower hello, world!
+
+	//Note: __cdecl is function calling convention
+
+	return 0;
+}
+```
+
+
+### 📌 14.23 자료형에게 별명을 붙여주는 typedef
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <time.h>	// time()
+
+int main()
+{
+	/*
+	 (자료형)(정의)
+		typedef specifier
+		- Give symbolic names (or aliases) to types
+		  (자료형에게 또 다른 이름, 별명을 붙혀주는 것)
+		- Does not create new types.
+		  (새로운 자료형을 만드는건 아님)
+	*/
+
+	typedef unsigned char BYTE;//Note the scope of BYTE
+
+	BYTE x, y[10] = { 0, }, * z = &x;
+
+	{
+		typedef unsigned char byte;//You can use lowercases as well.
+
+		/* Portable data types */
+
+		size_t s = sizeof(byte);// unsigned int (x86), unsigned long long (x64)
+		// unsigned int s = sizeof(byte);// x86 
+		// unsigned long long s = sizeof(byte);//x64
+	}
+
+	//byte b;// typedef definition has a scope
+
+
+
+	/*
+		This function returns the time since 00:00:00 UTC, January 1, 1970 (Unix timestamp)
+		in seconds.
+	*/
+
+	time_t t = time(NULL);
+
+	printf("%lld\n", t);
+
+
+
+	/*
+		typedef vs #define
+	*/
+
+	typedef char* STRING;
+
+	STRING name = "John Wick", sign = "World";
+
+	/*
+	- typedef는 compiler가 처리를 해준다. define은 단순히 복사 붙혀넣기.
+
+	- typedef interpretation is performed by the compiler, not the preprocessor
+	- More flexible than #define
+
+	#define STRING char *
+
+	STRING name, sign;
+	char * name, sign;//Note the type of sign
+	*/
+
+	typedef struct complex {
+		float real;
+		float imag;
+	} COMPLEX;// typedef struct complex COMPLEX
+
+	typedef struct { double width; double height; } rect;// No tag
+	rect r1 = { 1.1, 2.2 };
+	rect r2 = r1;
+	printf("%f %f\n", r2.width, r2.height);
+
+	return 0;
+}
+
+
+
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+    - 복잡한 선언은 typedef로 잘게 쪼개서 보면 편하다.
+
+	"One good way to synthesize declarations is
+	in small steps with typedef, ..."
+	- K&R book Chapter 5.12
+*/
+
+/* Complicated Function Declarations */
+
+char char3[3] = { 'A', 'B', 'C' };
+
+char(*complicated_function1())[3] // Function Returns Pointer To Char[3]
+{
+	return &char3;// Returns a pointer to char[3]
+}
+
+typedef char(*FRPTC3())[3];	// Funciton Returns Pointer To Char[3]
+typedef char(*(*PTFRPTC3)())[3];
+
+char(*(*fptr1)())[3] = complicated_function1;
+
+FRPTC3* fptr2 = complicated_function1;
+PTFRPTC3 fptr3 = complicated_function1;
+
+/* Use typedef to make declarations simpler */
+
+typedef char c3[3];  // char의 3개짜리 배열을 c3 자료형으로 선언.
+
+c3* complicated_function2()
+{
+	return &char3;// Returns a pointer to char[3]
+}
+
+int main()
+{
+	char(*ret_val)[3] = fptr1();
+
+	printf("%c %c %c\n", (*ret_val)[0], (*ret_val)[1], (*ret_val)[2]);
+
+	c3* my_c3 = fptr2();
+
+	printf("%c %c %c\n", (*my_c3)[0], (*my_c3)[1], (*my_c3)[2]);
+
+	return 0;
+}
+```
+
+
+### 📌 14.24 복잡한 선언을 해석하는 요령
+
+
+
+
+
+
+
+
+
+
+### 📌 14.25 qsort 함수 포인터 연습문제
 
 
 
