--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -1891,6 +1891,203 @@ int main()
 
 
 ### 📌 14.24 복잡한 선언을 해석하는 요령
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int temp(int a)
+{
+	return 0;
+}
+
+int (*g(int a))(int)
+{
+	return temp;
+}
+
+int main()
+{
+	/*
+		*	indicates a pointer
+		()	indicates a function
+		[]	indicates an array
+	*/
+
+	/** Deciphering Complex Declarations (KNK 18.4)
+		- 안쪽에서 바깥쪽으로 읽어라.
+		- *보다 (), []가 더 높다.
+
+		- Always read declarations from the inside out.
+		- When there's a choice, always favor [] and () over *(asterisk).
+	*/
+
+
+	// 배열
+	int* ap[10];	 // 10개짜리 배열, int포인터가 들어있는.    Identifier ap is an array of pointers
+
+	typedef int* pint;
+	pint ap2[10];
+
+
+	// 함수
+	float* fp(float);  // 함수 fp, float이 들어가고, float포인터가 return.    fp is a function that returns a pointer
+
+	typedef float* pfloat;
+	pfloat fp2(float);
+
+
+	// 정수형 인자를 받아 실행되는 함수의 주소를 저장하는 포인터
+	void (*pf)(int);  // 함수에 대한 포인터인데, int가 들어가고, return이 없는.
+	/*
+		void (*pf)(int);
+			  1           1. pointer to
+					2     2. function with int argument
+		 3                3. returning void
+	*/
+
+	// 뒤에 괄호면 인식자는 함수다.
+	int* (*x[10])(void);  // 10개짜리 배열 / 함수인데, 매개변수 없이, return이 int 포인터인.
+	/*
+		int* (*x[10])(void);
+				 1            1. array of
+			  2               2. pointers to
+						3     3. functions with no arguments
+		 4                    4. returning pointer to int
+	*/
+
+	/* A function can't return an array */
+
+	//int f(int)[]; // Wrong
+
+	/* BUT it can return a pointer to an array */
+
+	int(*f(int))[];
+
+	/* A function can't return a function */
+
+	//int g(int)(int); // Wrong
+
+	/* BUT it can return a pointer to a function */
+
+	int (*g(int))(int);
+
+	/* An array of functions aren't possible */
+
+	//int a[10](int); // Wrong
+
+	/* BUT an array of function pointers are possible */
+
+	int (*x2[10])(int);
+
+	/* Using typedef to simplify declarations */
+
+	typedef int FCN(int);
+	typedef FCN* FCN_PTR;
+	typedef FCN_PTR FCN_PTR_ARRAY[10];
+	FCN_PTR_ARRAY x3;
+
+	/* More examples */
+
+	int board[6][4];// 6×4 배열 (2차원 배열)
+	int** ptr;		// int를 가리키는 포인터의 포인터
+
+	int* risks[10];	// 정수를 가리키는 포인터를 저장하는 배열
+	int(*rusk)[10];	// int[10]을 가리키는 포인터
+
+	int* off[3][4]; // 3x4 배열, 요소는 int* (포인터 배열)
+	int(*uff)[3][4];// 3x4 배열을 가리키는 포인터
+	int(*uof[3])[4];// 크기 3의 배열, 요소는 int[4]을 가리키는 포인터
+
+	char* fump(int);// function returning pointer to char
+	char (*frump)(int);// pointer to a function that returns type char
+	char (*flump[3])(int);// array of 3 pointers to functions that return type char
+
+	typedef int arr5[5];
+	typedef arr5* p_arr5;
+	typedef p_arr5 arrp10[10];
+
+	arr5 togs;
+	p_arr5 p2;
+	arrp10 arp;
+
+	return 0;
+}
+```
+
+
+### 📌 14.25 qsort 함수 포인터 연습문제 (quick sort)
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+//TODO: try increasing/decreasing order
+int compare(const void* first, const void* second)
+{
+	if (*(float*)first > *(float*)second)
+		return 1;
+	else if (*(float*)first < *(float*)second)
+		return -1;
+	else
+		return 0;
+}
+
+int main()
+{
+	float arr[] = { 8.1f, 2.4f, 5.6f, 3.2f, 6.1f, 11.0f };
+	int n = sizeof(arr) / sizeof(arr[0]);
+
+	qsort(arr, n, sizeof(float), compare);
+
+	for (int i = 0; i < n; i++)
+		printf("%f ", arr[i]);
+
+	return 0;
+}
+```
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+struct kid
+{
+	char name[100];
+	int height;
+};
+
+//TODO: try increasing/decreasing order
+int compare(const void* first, const void* second);
+
+int main()
+{
+	struct kid my_friends[] = {
+		"Jack Jack", 40, "Geenie", 300, "Aladdin", 170, "Piona", 150
+	};
+
+	const int n = sizeof(my_friends) / sizeof(struct kid);
+
+	qsort(my_friends, n, sizeof(struct kid), compare);
+
+	for (int i = 0; i < n; i++)
+		printf("%s     \t%d\n", my_friends[i].name, my_friends[i].height);
+
+	return 0;
+}
+
+int compare(const void* first, const void* second)
+{
+	if (((struct kid*)first)->height > ((struct kid*)second)->height)
+		return 1;
+	else if (((struct kid*)first)->height < ((struct kid*)second)->height)
+		return -1;
+	else
+		return 0;
+}
+```
+
+
+### 📌 14.26 함수 포인터의 배열 연습문제
 
 
 
@@ -1901,7 +2098,6 @@ int main()
 
 
 
-### 📌 14.25 qsort 함수 포인터 연습문제
 
 
 
@@ -1913,16 +2109,4 @@ int main()
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-### 📌 
 
