--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -2091,6 +2091,38 @@ int compare(const void* first, const void* second)
 ``` c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
+
+void one()
+{
+	puts("One.");
+}
+
+void two()
+{
+	puts("Two.");
+}
+
+int main()
+{
+	char num[] = { 1, 2 };
+	int n = sizeof(num) / sizeof(char);
+
+	typedef void(*func_pt)();
+	func_pt fpt1[] = { one, two };
+
+	int c;
+	scanf("%d%*[^\n]%*c", &c);
+
+	for (int i = 0; i < n; ++i)
+		if (num[i] == c)
+			fpt1[i]();
+
+	return 0;
+}
+```
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
 #include <ctype.h>
 #include <stdlib.h>
 #include <stdbool.h>
