--- a/C/15.0_bit.md
+++ b/C/15.0_bit.md
@@ -1,1 +1,23 @@
-### 📌 15.1 비트단위 논리 연산자
+### 📌 15.1 비트단위 논리 연산자 (Bitwise Logical Operators)
+<img width="400" src="https://github.com/user-attachments/assets/feed9c4a-b487-4337-b960-e17a5b23375f"/>
+<img width="300" src="https://github.com/user-attachments/assets/5a5def5e-d81a-405b-9fda-02b743920457"/>
+<img width="300" src="https://github.com/user-attachments/assets/7ec933b6-beb6-42da-8308-a7cefeb7ec5d"/>
+<img width="300" src="https://github.com/user-attachments/assets/f2c63995-3070-44c9-b5aa-ed46ea2393c9"/>
+<img width="300" src="https://github.com/user-attachments/assets/2ba3ff18-6fb5-419a-8274-74ff2f13b822"/>
+
+
+### 📌 15.2 이진수를 십진수로 바꾸기 연습문제
+
+
+
+
+
+
+
+
+
+
+
+
+
+
