--- a/C/15.0_bit.md
+++ b/C/15.0_bit.md
@@ -395,33 +395,217 @@ int main()
 ```
 
 
-### 📌 15.9 구조체 안의 비트 필드
+### 📌 15.9 구조체 안의 비트 필드(Bit-Fields)
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/adb5a77b-2a79-4627-b235-7e790f2ef767" />
 
 
+### 📌 15.10 비트필드의 사용방법
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <limits.h> // CHAR_BIT
+#include <stdbool.h>
+
+void char_to_binary(unsigned char uc)
+{
+	const int bits = CHAR_BIT * sizeof(unsigned char);
+	for (int i = bits - 1; i >= 0; i--)
+		printf("%d", (uc >> i) & 1);
+}
+
+void print_binary(char* data, int bytes)//Note: extended for any sizes
+{
+	for (int i = 0; i < bytes; ++i)
+		//char_to_binary(data[i]);
+		char_to_binary(data[bytes - 1 - i]);
+	printf("\n");
+}
+
+int main()
+{
+	struct items {
+		bool has_sword : 1;	// : number means bits to use!
+		bool has_shield : 1;
+		bool has_potion : 1;
+		bool has_guntlet : 1;
+		bool has_hammer : 1;
+		bool has_key : 1;
+		bool has_ring : 1;
+		bool has_amulet : 1;
+	} items_flag;
+
+	items_flag.has_sword = 1;	// flags = flags | MASK_SWORD;
+	items_flag.has_shield = 1;
+	items_flag.has_potion = 0;
+	items_flag.has_guntlet = 1;
+	items_flag.has_hammer = 0;
+	items_flag.has_key = 0;
+	items_flag.has_ring = 1;
+	items_flag.has_amulet = true;
+
+	printf("Size = %zd\n", sizeof(items_flag));
+
+	print_binary((char*)&items_flag, sizeof(items_flag));
+
+	if (items_flag.has_key == 1)	// if ((flags & MASK_KEY) == MASK_KEY)
+		printf(">> You can enter.\n");
+
+	union {
+		struct items  bf;
+		unsigned char uc;
+	} uni_flag;
+
+	uni_flag.uc = 0;
+	uni_flag.bf.has_amulet = true;
+	uni_flag.uc |= (1 << 5);
+	print_binary((char*)&uni_flag, sizeof(uni_flag));
+	uni_flag.bf.has_key = false;
+	print_binary((char*)&uni_flag, sizeof(uni_flag));
+
+	/*
+		KNK DOS example
+	*/
+
+	struct file_time {
+		unsigned int seconds : 5;	// 2^5 = 32, (0 ~ 29) 30*2 seconds 
+		unsigned int minutes : 6;	// 2^6 = 64, (0 ~ 59) 60 minutes
+		unsigned int hours : 5;   // 2^5 = 32, (0 ~ 23) 24 hours
+	};
+
+	struct file_date {
+		unsigned int day : 5; // 2^5 = 32,  1 ~ 31
+		unsigned int month : 4; // 2^4 = 16,  1 ~ 12
+		unsigned int year : 7; // 2^7 = 128, 1980 ~
+	} fd;
+
+	/* 1988 12 28*/
+	fd.day = 28;		// try overflow, try 'signed int'
+	fd.month = 12;
+	fd.year = 8;
+
+	printf("Day %u, Month %u, Year %u\n", fd.day, fd.month, fd.year);
+	//scanf("%d", &fd.day); /* WRONG */
+
+	return 0;
+}
+```
 
 
+### 📌 15.11 비트필드의 패딩
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <limits.h> // CHAR_BIT
+#include <stdbool.h>
+#include <string.h>
+
+void char_to_binary(unsigned char uc)
+{
+	const int bits = CHAR_BIT * sizeof(unsigned char);
+	for (int i = bits - 1; i >= 0; i--)
+		printf("%d", (uc >> i) & 1);
+}
+
+void print_binary(char* data, int bytes)//Note: extended for any sizes
+{
+	for (int i = 0; i < bytes; ++i)
+		char_to_binary(data[bytes - 1 - i]);
+	printf("\n");
+}
+
+int main()
+{
+	struct {
+		bool option1 : 1;
+		unsigned long long : 0;
+		bool option2 : 1;
+		//unsigned long long option3 : 16;
+	} bbf;
+
+	//memset((char*)& bbf, 0x00, sizeof(bbf));
+	//print_binary((char*)& bbf, sizeof(bbf));
+	//bbf.option1 = 1;
+	//bbf.option2 = 1;
+	//bbf.option3 = 0xffff;
+	//print_binary((char*)& bbf, sizeof(bbf));
+
+	printf("%zu bytes\n", sizeof(bbf));
+
+	struct {
+		unsigned short option1 : 1;
+		unsigned short option2 : 1;
+		unsigned short : 0;
+		unsigned short option3 : 1;
+	} usbf;
+
+	printf("%zu bytes\n", sizeof(usbf));
+
+	struct {
+		unsigned int option1 : 1;
+		unsigned int : 0;
+		unsigned int option2 : 1;
+		//bool option3 : 1;
+	} uibf;
+
+	printf("%zu bytes\n", sizeof(uibf));
+
+	//memset((char*)& uibf, 0x00, sizeof(uibf));
+	//print_binary((char*)& uibf, sizeof(uibf));
+
+	//uibf.option1 = 1;
+	//uibf.option2 = 1;
+	//print_binary((char*)& uibf, sizeof(uibf));
+
+	return 0;
+}
+```
 
 
+### 📌 15.12 메모리 줄맞춤 alignof, alignas
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+//#include <stdalign.h> // c++ style alignas, alignof
 
+int main()
+{
+#ifdef __clang_major__
+	printf("clang detected version %d.%d\n", __clang_major__, __clang_minor__);
+#endif
 
+#ifdef __GNUC__
+	// note that clang 3.7 declares itself as a gcc 4.2"
+	printf("gcc detected version %d.%d\n", __GNUC__, __GNUC_MINOR__);
+#endif
 
+	//printf("Alignment of char = %zu\n", alignof(char));
+	//printf("alignof(float[10]) = %zu\n", alignof(float[10]));
+	//printf("alignof(struct{char c; int n;}) = %zu\n",
+	//	alignof(struct { char c; int n; }));
 
+	//double dx;
+	//char ca;
+	//char cx;
+	//double dz;
+	//char cb;
+	////char _Alignas(double) cz;
+	//char alignas(16) cz;
+	////char cz;
 
+	////printf("char alignment: %zd\n", _Alignof(char));
+	////printf("double alignment: %zd\n", _Alignof(double));
+	//printf("char alignment: %zd\n", alignof(char));
+	//printf("double alignment: %zd\n", alignof(double));
 
+	//printf("&dx: %p %lld\n", &dx, (long long)& dx % 8);
+	//printf("&ca: %p %lld\n", &ca, (long long)& ca % 8);
+	//printf("&cx: %p %lld\n", &cx, (long long)& cx % 8);
+	//printf("&dz: %p %lld\n", &dz, (long long)& dz % 8);
+	//printf("&cb: %p %lld\n", &cb, (long long)& cb % 8);
+	//printf("&cz: %p %lld\n", &cz, (long long)& cz % 16);
 
+	//unsigned char alignas(long double) c_arr[sizeof(long double)];
 
-
-
-
-
-
-
-
-
-
-
-
-### 📌 
-
-
-
+	return 0;
+}
+```
